--- a/Week 04/article/lab4_pt2.html
+++ b/Week 04/article/lab4_pt2.html
@@ -11,21 +11,25 @@
 	
 	<body>
 	
-		<div>
+		<div id="block">
 			<figure>
 				<img alt="David Wallace" src="dwallace.png">
-				<p id="text">David Wallace returns to Munster squad</p>
-				<p >David Wallace is one of nine internationals to return to...</p>
-				<p id="text">Read More</p>
+				<figcaption>
+					David Wallace returns to Munster squad
+					David Wallace is one of nine internationals to return to...
+					Read More
+				</figcaption>
 			</figure>
 		</div>
 		
 		<div id="block">
 			<figure>
 				<img alt="Kanye" src="kanye.png">
-				<p id="text">2008 American Music Awards: The Winners</p>
-				<p>The 2008 American Music Awards took place in Los Angeles at the...</p>
-				<p id="text">Read More</p>
+				<figcaption>
+				2008 American Music Awards: The Winners
+				 2008 American Music Awards took place in Los Angeles at the...
+				Read More
+				</figcaption>
 			</figure>
 			
 		</div>
@@ -33,19 +37,23 @@
 		<br />
 		
 		<div id="block">
-			Other headlines:
-			-Keane Desperate for consistency<br/>
-			-Kazal camp wary of Grace rivals<br/>
-			-Toner takes player gong<br/>
-			>View all stories
+			<b>Other Headlines:</b><br/>
+			<span id="text">
+				-Keane Desperate for consistency<br/>
+				-Kazal camp wary of Grace rivals<br/>
+				-Toner takes player gong<br/><br/>
+				>View all stories
+			</span>
 		</div>
 			
 		<div id="block">
-			Other headlines:
-			-Orbital reform for UK festival<br/>
-			-Fairport convention for Whelan's<br/>
-			-Deerhunter Plan Whelan's gig<br/>
-			>View all stories
+			<b>Other Headlines:</b><br/>
+			<span id="text">
+				-Orbital reform for UK festival<br/>
+				-Fairport convention for Whelan's<br/>
+				-Deerhunter Plan Whelan's gig<br/><br/>
+				>View all stories
+			</span>
 		</div>
 		
 	</body>
